[gd_scene load_steps=6 format=3 uid="uid://vhhyi3mimwtp"]

[ext_resource type="Script" path="res://Tile/Pointer.gd" id="1_syfrq"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_oji6a"]
albedo_color = Color(0.63, 0.72, 0.86, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_iu87g"]
material = SubResource("StandardMaterial3D_oji6a")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_6e7v6"]

[sub_resource type="CylinderMesh" id="CylinderMesh_80x6k"]
material = SubResource("StandardMaterial3D_6e7v6")
top_radius = 0.0

[node name="Pointer" type="Node3D"]
script = ExtResource("1_syfrq")

[node name="Top" type="MeshInstance3D" parent="."]
transform = Transform3D(0.16, 0, 0, 0, 0.16, 0, 0, 0, 0.16, 0, 0.164519, 0)
cast_shadow = 0
mesh = SubResource("CylinderMesh_iu87g")

[node name="Bottom" type="MeshInstance3D" parent="."]
transform = Transform3D(0.3, 0, 0, 0, -0.25, 4.52987e-08, 0, -3.7749e-08, -0.3, 0, -0.245504, 0)
cast_shadow = 0
mesh = SubResource("CylinderMesh_80x6k")

[node name="StopTimer" type="Timer" parent="."]
wait_time = 0.7
autostart = true

[node name="StartTimer" type="Timer" parent="."]
wait_time = 0.05

[connection signal="timeout" from="StopTimer" to="." method="StopBob"]
[connection signal="timeout" from="StartTimer" to="." method="StartBob"]
